# kgraph

./: LICENSE  MANIFEST.in  PKG-INFO  README.md  main.py  manylinux.md  protocol.py  setup.cfg  setup.py  test.py  transe.py
kgraph/: __init__.py  __init__.pyi  _train.py  log.py  make.sh  model.py  nn.py  utils.py
kgraph/_utils/: cache_data.pyx  corrupt.pyx  mem.pxd  mem.pyx  random_int64.pxd  read.pxd  read.pyx  sample.pyx  test.pyx  tools.pyx
kgraph/base/: Corrupt.h  Reader.h  Setting.h  Triple.h  test_code.cpp
kgraph/data/: __init__.py  _data.py  _downloading.py  _utils.py  data_utils.py
kgraph/datasets/: TestDataLoader.py  TrainDataLoader.py  __init__.py  data.py  data_loader.py  protocol.py  read.py
kgraph/eval/: _Eval.py  __init__.py  function.py  functions.py  metrics.py
kgraph/evaluation/: __init__.py  metrics.py
kgraph/function/: __init__.py  sample.py
kgraph/log/: __init__.py  _log.py  log.py
kgraph/loss/: Loss.py  MarginLoss.py  SigmoidLoss.py  SoftplusLoss.py  __init__.py
kgraph/nn/: __init__.py  models.py
kgraph/package/: README.md
kgraph/test/: MANIFEST.in  test.py
kgraph/train/: Loss.py  __init__.py  opt.py  training.py
kgraph/utils/: Tester.py  Trainer.py  __init__.py  __utils.py  cache_data.pxd  classification.cpp  classification.pyx  corrupt.cpp  corrupt.pxd  corrupt.pyx  dataloader.py  evaluation.cpp  evaluation.pyx  memory.cpp  memory.pxd  memory.pyx  metrics.py  pagerank.py  protocol.py  random_int64.pyx  read.cpp  read.pxd  read.pyx  sample.cpp  sample.pyx  (+5 more)
tests/package/: README.md  setup.cfg
train/: train_process.py
(+1 files in other folders)
