[metadata]
description = A Python library for relational learning on knowledge graphs.
author = Shuanglong Yao
author_email = shuanglongyao@gmail.com
license = Apache 2.0
long_description = file:README.md
classifiers =
    Operating System :: OS Independent
    Intended Audience :: Developers
    Programming Language :: Cython
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries
project_urls =
    Source = https://github.com/YaoShuang-long/kgraph

[options]
zip_safe = False
include_package_data = False
python_requires = >=3.7
install_requires =
    numpy>=1.14.3
    torch>=1.6.0
    tqdm>=4.23.4
    prettytable>=0.7.2
    typing_extensions>=3.7.0,<4.0.0.0

[bdist_wheel]
universal = False

[sdist]
formats = gztar

[mypy]
ignore_missing_imports = True
ignore_missing_imports_per_module = True
no_implicit_optional = True
# plugins = pydantic.mypy, thinc.mypy
allow_redefinition = True
